compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_into_expression_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let x = [1, 2, 3]\n  test_mod.reverse(x)\n}\n    "
---

import test_mod

fn main() {
  
  test_mod.reverse([1, 2, 3])
}
    
