compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_into_fn_body_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let y = 2\n  let func = fn(x) { x + y }\n  test_mod.map([1, 2, 3], func)\n}\n    "
---

import test_mod

fn main() {
  
  let func = fn(x) { x + 2 }
  test_mod.map([1, 2, 3], func)
}
    
