compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_into_multiple_call_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let x = [1,2,3]\n  let y = test_mod.reverse(x)\n  let z = test_mod.reverse(x)\n  let u = test_mod.reverse(x)\n  let v = test_mod.reverse(x)\n}\n    "
---

import test_mod

fn main() {
  
  let y = test_mod.reverse([1, 2, 3])
  let z = test_mod.reverse([1, 2, 3])
  let u = test_mod.reverse([1, 2, 3])
  let v = test_mod.reverse([1, 2, 3])
}
    
