compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_into_pipeline_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let x = [1,2,3]\n  let result =\n  x\n  |> test_mod.reverse()\n  |> test_mod.map(fn(x) { x * 2})\n}\n    "
---

import test_mod

fn main() {
  
  let result =
  [1, 2, 3]
  |> test_mod.reverse()
  |> test_mod.map(fn(x) { x * 2})
}
    
