compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_into_tuple_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport test_mod\n\nfn main() {\n  let x = #(1, 2, 3)\n  let res = #(x, #(4, 5, 6))\n}\n    "
---

import test_mod

fn main() {
  
  let res = #(#(1, 2, 3), #(4, 5, 6))
}
    
